Menambahkan CSS Selector, Skenario, dan kelas Diagram Revisi Play Framework Commit untuk Presentasi Skripsi 1

--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -76,13 +76,11 @@ Sistematika penulisan setiap bab pada skripsi ini adalah sebagai berikut:
 
 \begin{enumerate}
   \item Bab Pendahuluan \\
-  Bab 1 berisikan latar belakang, rumusan masalah, tujuan, metode penelitian,
-  dan sistematika penulisan dari penelitian yang dilakukan.
+  Bab 1 berisi latar belakang, rumusan masalah, tujuan, metode penelitian,
+  dan sistematika penulisan yang digunakan untuk menyusun skripsi ini.
   \item Bab Dasar Teori \\
-  Bab 2 berisikan teori-teori yang menunjang penelitian yang dilakukan. Teori
-  yang digunakan dalam penilitian ini, antara lain \textit{Library} jsoup, Chrome DevTools, dan \textit{Play Framework}.
+  Bab 2 berisikan teori-teori yang digunakan dalam pembuatan skripsi ini. Teori
+  yang digunakan yaitu \textit{library} jsoup, Chrome DevTools, Play Framework, SIA Models, dan CSS \textit{selector}.
   \item Bab Analisis \\
-  Bab 3 berisikan analisis yang dilakukan pada penelitian ini. Analisis yang
-  dilakukan meliputi: Analisis Fitur-fitur FTIS Student Portal, Analisis \textit{Web Scraping}, 
-	dan Analisis dari Aplikasi yang Akan Dibuat.
+  Bab 3 berisikan analisis yang dilakukan pada skripsi ini, meliputi analisis Portal Akademik Mahasiswa, analisis kebutuhan IT Student Portal, analisis komunikasi Portal Akademik Mahasiswa untuk fitur IT Student Portal, analisis \textit{use case} meliputi diagram \textsl{use case} dan skenario, serta analisis kelas. 
 \end{enumerate}
