--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -62,9 +62,9 @@
 %=============================================================================
 % \mode{kosong}
 % \mode{cover}
-% \mode{sidang}
+ \mode{sidang}
 %\mode{sidang_akhir}
-\mode{final} 
+%\mode{final} 
 %=============================================================================
 
 %_____________________________________________________________________________
