--- a/doc/DokumenSkripsi/pustaka.bib
+++ b/doc/DokumenSkripsi/pustaka.bib
@@ -8,6 +8,14 @@
 	year = {2014}
 }
 
+@book{Meyer:2012,
+	author = {Meyer, Eric A.},
+	isbn = {9781449342494},
+	publisher = {O'Reilly Media},
+	title = {Selectors, Specificity, and the Cascade},
+	year = {2012}
+}
+
 @book{BTI:2012,
 	author = "{Biro Teknologi Informasi UNPAR}",
 	publisher = {Biro Teknologi Informasi UNPAR},
