--- a/doc/ProgressReport/document.tex
+++ b/doc/ProgressReport/document.tex
@@ -29,7 +29,7 @@
 %ISILAH DATA DATA BERIKUT INI:
 \newcommand{\nama}{Herfan Heryandi}
 \newcommand{\@npm}{2012730012}
-\newcommand{\tanggal}{01/10/2015} %Tanggal pembuatan dokumen
+\newcommand{\tanggal}{03/10/2015} %Tanggal pembuatan dokumen
 \newcommand{\@judultopik}{IT STUDENT PORTAL: PEMANFAATAN \textit{WEB SCRAPING} UNTUK KUSTOMISASI PORTAL AKADEMIK MAHASISWA} % Judul/topik anda
 \newcommand{\kodetopik}{PAS3904}
 \newcommand{\jumpemb}{1} % Jumlah pembimbing, 1 atau 2
@@ -112,8 +112,8 @@ Persentase penyelesaian skripsi sampai dengan dokumen ini dibuat dapat dilihat p
     4   & 14  &   &  14 &  & 6\\ \hline
     5   & 14  &   & 14 &  & 5\\ \hline
     6   & 14 &   & 14  &  & 3\\ \hline
-    7   & 16  & 8  & 8 &  {\footnotesize bab 1, bab 2, dan bab 3 di S1} & 5\\ \hline
-    Total  & 100  & 50  & 50 &  & 59\\ \hline
+    7   & 16  & 8  & 8 &  {\footnotesize bab 1, bab 2, dan bab 3 di S1} & 7\\ \hline
+    Total  & 100  & 50  & 50 &  & 61\\ \hline
                           \end{tabular}										
 \end{center}
 
@@ -125,18 +125,18 @@ Keterangan (*)\\
 5 : Penjelasan singkat apa yang dilakukan di S1 (Skripsi 1) atau S2 (skripsi 2)\\
 6 : Persentase yang sudah diselesaikan sampai saat ini 
 
-\section{Kendala yang dihadapi}
+%\section{Kendala yang dihadapi}
 %TULISKAN BAGIAN INI JIKA DOKUMEN ANDA TIPE A ATAU C
-Kendala - kendala yang dihadapi selama mengerjakan skripsi :
-\begin{itemize}
-	\item Terlalu banyak melakukan prokratinasi
-	\item Mengalami kesulitan dalam instalasi Play Framework
-	\item Kurang familiar dengan pemrograman Play Framework
-\end{itemize}
+%Kendala - kendala yang dihadapi selama mengerjakan skripsi :
+%\begin{itemize}
+%	\item Terlalu banyak melakukan prokratinasi
+%	\item Mengalami kesulitan dalam instalasi Play Framework
+%	\item Kurang familiar dengan pemrograman Play Framework
+%\end{itemize}
 
 \vspace{1cm}
 \centering Bandung, \tanggal\\
-\vspace{1.8cm} \nama \\ 
+\vspace{2cm} \nama \\ 
 \vspace{1cm}
 
 Menyetujui, \\
@@ -154,7 +154,7 @@ Menyetujui, \\
 \vspace{0.3cm}
 }{
 % \centering Bandung, \makebox[0.5cm]{\hrulefill}/\makebox[0.5cm]{\hrulefill}/2013\\
-\vspace{1.8cm} Nama: \pembA \\ Pembimbing Tunggal
+\vspace{2cm} Nama: \pembA \\ Pembimbing Tunggal
 }
 `
 \end{document}
